--- a/_posts/2019-06-03-375-mba.md
+++ b/_posts/2019-06-03-375-mba.md
@@ -67,10 +67,10 @@ tags: [MBA]
 + [第5节 汤明哲 进入阻绝和竞争战略]()
 
 第十一章 市场与竞争
-+ [第1节 张凯夫 技术/制度创新与最伟大的企业]()
-+ [第2节 张凯夫 市场与产权]()
-+ [第3节 张凯夫 产权、规模效应与网络效应]()
-+ [第4节 张凯夫 破坏式创新与无线电故事]()
++ [第1节 张凯夫 技术/制度创新与最伟大的企业](http://www.baoguoding.com/2019/06/384-mba1101.html)
++ [第2节 张凯夫 市场与产权](http://www.baoguoding.com/2019/06/385-mba1102.html)
++ [第3节 张凯夫 产权、规模效应与网络效应](http://www.baoguoding.com/2019/06/386-mba1103.html)
++ [第4节 张凯夫 破坏式创新与无线电故事](http://www.baoguoding.com/2019/06/387-mba1104.html)
 
 第十二章 组织行为学模块
 + [第1节 包季鸣 微观层面：颠覆认知，寻求魔镜](http://www.baoguoding.com/2019/06/380-mba1201.html)
