--- a/_posts/2019-06-03-375-mba.md
+++ b/_posts/2019-06-03-375-mba.md
@@ -60,11 +60,11 @@ tags: [MBA]
 + [第4节 朱宁 高管的致命行为决策]()
 
 第十章 战略管理模块
-+ [第1节 汤明哲 战略管理导论]()
-+ [第2节 汤明哲 战略的布局和段数]()
-+ [第3节 汤明哲 如何制定战略]()
-+ [第4节 汤明哲 谋和战略]()
-+ [第5节 汤明哲 进入阻绝和竞争战略]()
++ [第1节 汤明哲 战略管理导论](http://www.baoguoding.com/2019/06/388-mba1001.html)
++ [第2节 汤明哲 战略的布局和段数](http://www.baoguoding.com/2019/06/389-mba1002.html)
++ [第3节 汤明哲 如何制定战略](http://www.baoguoding.com/2019/06/390-mba1003.html)
++ [第4节 汤明哲 谋和战略](http://www.baoguoding.com/2019/06/391-mba1004.html)
++ [第5节 汤明哲 进入阻绝和竞争战略](http://www.baoguoding.com/2019/06/392-mba1005.html)
 
 第十一章 市场与竞争
 + [第1节 张凯夫 技术/制度创新与最伟大的企业](http://www.baoguoding.com/2019/06/384-mba1101.html)
