--- a/_posts/2019-06-03-375-mba.md
+++ b/_posts/2019-06-03-375-mba.md
@@ -49,15 +49,15 @@ tags: [MBA]
 
 第八章 商业模式模块
 + [第1节 魏炜 商业模式的原理和实践上](http://www.baoguoding.com/2018/11/313-syms01.html)
-+ [第2节 魏炜 商业模式和原理和实践下]()
-+ [第3节 魏炜 “魏朱六要素商业模式”深度解构]()
-+ [第4节 魏炜 商业模式与竞争优势]()
++ [第2节 魏炜 商业模式和原理和实践下](http://www.baoguoding.com/2019/06/397-mba0802.html)
++ [第3节 魏炜 “魏朱六要素商业模式”深度解构](http://www.baoguoding.com/2019/06/398-mba0803.html)
++ [第4节 魏炜 商业模式与竞争优势](http://www.baoguoding.com/2019/06/399-mba0804.html)
 
 第九章 行为金融学模块
-+ [第1节 朱宁 你必须正视的经济泡沫]()
-+ [第2节 朱宁 代表性偏差与框架效应]()
-+ [第3节 朱宁 过度自信与损失规避]()
-+ [第4节 朱宁 高管的致命行为决策]()
++ [第1节 朱宁 你必须正视的经济泡沫](http://www.baoguoding.com/2019/06/393-mba0901.html)
++ [第2节 朱宁 代表性偏差与框架效应](http://www.baoguoding.com/2019/06/394-mba0902.html)
++ [第3节 朱宁 过度自信与损失规避](http://www.baoguoding.com/2019/06/395-mba0903.html)
++ [第4节 朱宁 高管的致命行为决策](http://www.baoguoding.com/2019/06/396-mba0904.html)
 
 第十章 战略管理模块
 + [第1节 汤明哲 战略管理导论](http://www.baoguoding.com/2019/06/388-mba1001.html)
