--- a/_posts/2018-04-12-274-tal.md
+++ b/_posts/2018-04-12-274-tal.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 本-沙哈尔：正向领导力·第1讲—如何找到你的最佳领导区
+title: 【领导力模块】 第1节 如何找到你的最佳领导区
 pid: 274
-tags: [混沌商学院]
+tags: [MBA]
 ---
 
 > 引言
