--- a/_posts/2018-10-24-293-gsjrx02.md
+++ b/_posts/2018-10-24-293-gsjrx02.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 02 陈晋蓉：金融财务会计联动的资本战略
+title: 【公司金融模块】 第2节 金融财务会计联动的资本战略
 pid: 293
-tags: [公司金融学]
+tags: [MBA, 公司金融学]
 ---
 
 《公司金融学》
