--- a/_posts/2018-10-24-294-gsjrx03.md
+++ b/_posts/2018-10-24-294-gsjrx03.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 03 陈晋蓉：产融结合的创新商业模式
+title: 【公司金融模块】 第3节 产融结合的创新商业模式
 pid: 294
-tags: [公司金融学]
+tags: [MBA, 公司金融学]
 ---
 
 《公司金融学》
