--- a/_posts/2018-10-24-295-gsjrx04.md
+++ b/_posts/2018-10-24-295-gsjrx04.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 04 陈晋蓉：风险意识与财务管控
+title: 【公司金融模块】 第4节 风险意识与财务管控
 pid: 295
-tags: [公司金融学]
+tags: [MBA, 公司金融学]
 ---
 
 《公司金融学》
