--- a/_posts/2018-10-24-296-gsjrx05.md
+++ b/_posts/2018-10-24-296-gsjrx05.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 05 陈晋蓉：投融资决策与企业价值管理
+title: 【公司金融模块】 第5节 投融资决策与企业价值管理
 pid: 296
-tags: [公司金融学]
+tags: [MBA, 公司金融学]
 ---
 
 《公司金融学》
