--- a/_posts/2018-10-29-302-xcw03.md
+++ b/_posts/2018-10-29-302-xcw03.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 03 单喆敏：财务报表的应用
+title: 【财务会计模块】 第3节 财务报表的应用
 pid: 302
-tags: [管理，财务]
+tags: [MBA, 财务]
 ---
 
 上一堂课中，单教授主要讲授了“财务报表的原理”，这一堂课单教授讲授了如何运用这个原理来总结如何对内做财务报告，如何对债权人解释我们的偿债能力，如何对股东解释我们的投资价值，不同的财务报告的对象，不同的角度去看财务报表，其实是个分类的问题。
