--- a/_posts/2018-10-29-303-xcw04.md
+++ b/_posts/2018-10-29-303-xcw04.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 04 单喆敏：财务报表的分析方法和案例
+title: 【财务会计模块】 第4节 财务报表的分析方法和案例
 pid: 303
-tags: [管理，财务]
+tags: [MBA, 财务]
 ---
 
 《财务管理》第四讲——财务报表分析方法和案例
