--- a/_posts/2018-10-29-304-xcw05.md
+++ b/_posts/2018-10-29-304-xcw05.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 05 单喆敏：六段式表格及其应用
+title: 【财务会计模块】 第5节 六段式表格及其应用
 pid: 304
-tags: [管理，财务]
+tags: [MBA, 财务]
 ---
 
 《财务管理》第五讲——六段式表格及其应用
