--- a/_posts/2018-10-30-305-xyl01.md
+++ b/_posts/2018-10-30-305-xyl01.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 01 许玉林：人力资源管理创新与重构
+title: 【人力资源管理模块】 第1节 人力资源管理创新与重构
 pid: 305
-tags: [管理，人事]
+tags: [MBA, 人事]
 ---
 
 人力资源管理模块 专题一
