--- a/_posts/2018-10-30-306-xyl02.md
+++ b/_posts/2018-10-30-306-xyl02.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 02 许玉林：人力资源管理的战略思考
+title: 【人力资源管理模块】 第2节 人力资源管理的战略思考
 pid: 306
-tags: [管理，人事]
+tags: [MBA, 人事]
 ---
 
 人力资源管理模块 专题二
