--- a/_posts/2018-10-30-307-xyl03.md
+++ b/_posts/2018-10-30-307-xyl03.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 03 许玉林：人力资源管理制度设计之组织运行
+title: 【人力资源管理模块】 第3节 人力资源管理制度设计之组织运行
 pid: 307
-tags: [管理，人事]
+tags: [MBA, 人事]
 ---
 
 人力资源管理模块 第三讲
