--- a/_posts/2018-11-01-308-xyl04.md
+++ b/_posts/2018-11-01-308-xyl04.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 04 许玉林：文化整合（下）与管理圣经
+title: 【人力资源管理模块】 第4节 文化整合（下）与管理圣经
 pid: 308
-tags: [管理，人事]
+tags: [MBA, 人事]
 ---
 
 人力资源全景视角——文化整合（下）与管理圣经
