--- a/_posts/2018-11-04-310-marketing02.md
+++ b/_posts/2018-11-04-310-marketing02.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 02 柏唯良：4P&4C理论与市场营销研发
+title: 【市场营销模块】 第2节 4P&4C理论与市场营销研发
 pid: 310
-tags: [管理，市场营销]
+tags: [MBA, 市场营销]
 ---
 
 **一、传统的4P和4C理论**
