--- a/_posts/2018-11-04-311-marketing03.md
+++ b/_posts/2018-11-04-311-marketing03.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 03 柏唯良：定价工具与技术
+title: 【市场营销模块】 第3节 定价工具与技术
 pid: 311
-tags: [管理，市场营销]
+tags: [MBA, 市场营销]
 ---
 
 市场营销第三讲的主题是定价工具与技术，核心内容是关于定价的八个技巧。
