--- a/_posts/2018-11-06-312-marketing04.md
+++ b/_posts/2018-11-06-312-marketing04.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 04 柏唯良：注意力缺失世界中的品牌与促销
+title: 【市场营销模块】 第4节 注意力缺失世界中的品牌与促销
 pid: 312
-tags: [管理，市场营销]
+tags: [MBA, 市场营销]
 ---
 
 **第四讲 注意力缺失世界中的品牌与促销**
