--- a/_posts/2018-11-07-313-syms01.md
+++ b/_posts/2018-11-07-313-syms01.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 01 魏炜：商业模式理论与实践（上）
+title: 【商业模式模块】 第1节 商业模式理论与实践（上）
 pid: 313
-tags: [管理，商业模式]
+tags: [MBA, 商业模式]
 ---
 
 商业模式理论与实践（上）
