--- a/_posts/2018-10-24-292-gsjrx01.md
+++ b/_posts/2018-10-24-292-gsjrx01.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 01 陈晋蓉：资本视角下的公司运营
+title: 【公司金融模块】 第1节 资本视角下的公司运营
 pid: 292
-tags: [公司金融学]
+tags: [MBA, 公司金融学]
 ---
 
 《公司金融学》
