--- a/_posts/2019-04-29-363-make.md
+++ b/_posts/2019-04-29-363-make.md
@@ -18,9 +18,69 @@ tags: [centos, k8s]
 先看 make
 
 
+# make MAKEFLAGS
+
+```shell
+MAKEFLAGS += --silent
+```
+
+缩写为
+
+```shell
+MAKEFLAGS += -s
+```
+
+包含MAKEFLAGS的示例
+
+```shell
+MAKEFLAGS += -s
+
+hello1:
+        echo hello1
+
+hello2:
+        echo hello2
+
+.PHONY: hello1 hello2
+```
+
+输出结果
+
+```shell
+hello1
+hello2
+```
+
+不包含MAKEFLAGS的示例
+
+```shell
+# MAKEFLAGS += -s
+
+hello1:
+        echo hello1
+
+hello2:
+        echo hello2
+
+.PHONY: hello1 hello2
+```
+
+输出结果
+
+```shell
+echo hello1
+hello1
+echo hello2
+hello2
+```
+
+
+
 
 
 
 # 参考
 
-[Make 命令教程](http://www.ruanyifeng.com/blog/2015/02/make.html)
++ [Make 命令教程](http://www.ruanyifeng.com/blog/2015/02/make.html)
++ [隐含规则](https://seisman.github.io/how-to-write-makefile/implicit_rules.html)
++ [Makefile用法，详细到让人吐](https://www.cnblogs.com/aoyihuashao/archive/2010/01/18/1650865.html)
