--- a/_posts/2019-04-29-363-make.md
+++ b/_posts/2019-04-29-363-make.md
@@ -84,3 +84,5 @@ hello2
 + [Make 命令教程](http://www.ruanyifeng.com/blog/2015/02/make.html)
 + [隐含规则](https://seisman.github.io/how-to-write-makefile/implicit_rules.html)
 + [Makefile用法，详细到让人吐](https://www.cnblogs.com/aoyihuashao/archive/2010/01/18/1650865.html)
++ [Makefile中指示符](https://blog.csdn.net/xiaozhi_su/article/details/4202779)
++ [Makefile中指示符“include”、“-include”和“sinclude”的区别](https://blog.csdn.net/xiaozhi_su/article/details/4202779)
