--- a/_posts/2019-06-19-427-k8s-Makefile.md
+++ b/_posts/2019-06-19-427-k8s-Makefile.md
@@ -7,7 +7,11 @@ tags: [k8s]
 
 # 文件路径
 
-Makefile -> build/root/Makefile
+1. Makefile -> build/root/Makefile
+2. Makefile.generated_files -> build/root/Makefile.generated_files
+3. hack/run-in-gopath.sh
+4. hack/lib/init.sh 
+
 
 # DEBUG开关
 
@@ -623,6 +627,10 @@ endif
 ```
 
 # generated_files
+
+```shell
+make -f Makefile.generated_files generated_files CALLED_FROM_MAIN_MAKEFILE=1
+```
 
 ```shell
 define GENERATED_FILES_HELP_INFO
