--- a/_posts/2019-06-19-427-k8s-Makefile.md
+++ b/_posts/2019-06-19-427-k8s-Makefile.md
@@ -11,6 +11,12 @@ tags: [k8s]
 2. Makefile.generated_files -> build/root/Makefile.generated_files
 3. hack/run-in-gopath.sh
 4. hack/lib/init.sh 
+5. hack/lib/util.sh
+6. hack/lib/logging.sh
+7. hack/lib/version.sh
+8. hack/lib/golang.sh
+9. hack/lib/etcd.sh
+
 
 
 # DEBUG开关
