--- a/_posts/2019-04-29-363-make.md
+++ b/_posts/2019-04-29-363-make.md
@@ -86,3 +86,5 @@ hello2
 + [Makefile用法，详细到让人吐](https://www.cnblogs.com/aoyihuashao/archive/2010/01/18/1650865.html)
 + [Makefile中指示符](https://blog.csdn.net/xiaozhi_su/article/details/4202779)
 + [Makefile中指示符“include”、“-include”和“sinclude”的区别](https://blog.csdn.net/xiaozhi_su/article/details/4202779)
++ [linux bash中的三目运算符](https://blog.csdn.net/xiao_jun_0820/article/details/42101321)
++ [google的shell（编程）风格指南](https://www.jianshu.com/p/09abb264ab95)
