--- a/_posts/2019-06-27-436-find.md
+++ b/_posts/2019-06-27-436-find.md
@@ -49,7 +49,21 @@ find -H .                      \
 	| sed 's|^./staging/src|vendor|'
 ```
 
-```shell
-find -H . (-not((-path ./vendor -o -path ./_\* -o -path ./.\* -o -path ./docs) -prune)) "$@" | sed 's|^./staging/src|vendor|'
-```
+请一定按照上面换行的方式来写，合成一行的方式，屡次尝试，都失败！
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
