--- a/_posts/2019-06-03-376-mba1301.md
+++ b/_posts/2019-06-03-376-mba1301.md
@@ -11,7 +11,7 @@ tags: [MBA, 创新管理]
 
 1.1我们为何要创新
 
-中国未来最大的挑战就在于创新。中国有非常悠久的历史和文化的传承，但是经济发展的历史相对较短。
+中国未来最大的挑战就在于创新。中国有非常悠久的历史和文化的传承，但是**经济发展的历史相对较短**。
 
 中国刚改革开放第一阶段的时候，是一个低成本的全世界的制造中心，这是中国打造竞争力的第一步。第二阶段，中国就开始发展创新了。而且现在已经经历了转型和过渡，也就是从模仿到自主的创新。
 
@@ -82,7 +82,7 @@ tags: [MBA, 创新管理]
 
 我举个例子，人均收入这个概念在美国是5万美金，在印度是2000美金。你不可能把美国的商业模式照抄到印度。
 
-2.3通用电气案例
+> 2.3 ECG案例
 
 我可以给大家举一个例子，这个公司在印度真的做了这种突破式的创新。是通用电气的医疗事业部，它们是专门做医学成像设备的，也就是X光机，或者说超声、CT机。GE是为美国的消费者发明了心电图机，这个是非常强大的一台设备。
 
@@ -104,7 +104,7 @@ tags: [MBA, 创新管理]
 
 所以，GE是把大量的非消费者用这台百元级别的心电图机器转换成了消费者，它就是创新，那我们说了盒子一它是怎么抢夺现有市场份额，但是盒子二和三是创造市场。
 
-2.4孩之宝案例
+> 2.4 孩之宝案例
 
 我们再看一个例子，孩之宝，做玩具的公司，其中有一些像土豆先生、变形金刚，都是它家的产品。但是它们也有传统的那一些桌游，《大富翁》、《糖果王国》这样子的一些传统的桌游。
 
@@ -196,7 +196,7 @@ tags: [MBA, 创新管理]
 
 在2019年孩之宝之所以做的非常好，是因为它其实从90年代就开始做这些工作了。所以，我说现在就是未来，我和大家讲的所有的这些东西都很容易理解，为什么做起来那么难呢？
 
-2.6跳高案例
+> 2.6 跳高案例
 
 我可以和大家打一个比方。奥运会是1896年的时候开始的，所以我们有过去100多年的数据了，看一下奥运会跳高金牌得主。第二个盒子和第三个盒子，其实就是在跳高的方式上进行了突破式的创新，马上成绩就上去了。
 
@@ -218,7 +218,9 @@ tags: [MBA, 创新管理]
 
 那么，最终你做出来会是什么样呢？你的可能性在哪里？ 100块钱的ECG机器并不是对标最佳实践标杆做出来的，背越式跳高也不是这种线性的提高，而是完全是一种非线性的创新。
 
-如果说你要再找这种例子的话，我们来看一下这个小微贷款案例。尤纳斯， 1993年的时候他成立了格莱珉乡村银行，在那之前他是教经济学的教授，是在孟加拉国大学。
+> 格莱珉乡村银行的例子
+
+如果说你要再找这种例子的话，我们来看一下这个小微贷款案例。尤纳斯，1993年的时候他成立了格莱珉乡村银行，在那之前他是教经济学的教授，是在孟加拉国大学。
 
 大家也知道，孟加拉国有很多的饥荒，1988年的时候饥荒，其中166个村民奄奄一息了，其实他们需要的都是25美元的贷款。尤纳斯博士看了看自己的口袋，给了这些村民25美元的贷款也得到了还款，而且还附带10%的利息。所以，他能够把这166个非消费者转换成银行业的消费者。
 
@@ -255,6 +257,8 @@ tags: [MBA, 创新管理]
 第一个标准是方向。第二个标准就是动力、热情。可以这么来想，员工你光给他定一些财务上的KPI，这是不可能激发他的热情的，要有让这个员工迫不及待想要来工作的理由，这是战略意图第二个标准。第三个标准就是挑战，战略意图必须是大胆的，是充满勇气的，一定要有大梦想。
 
 这是战略意图的三个关键，方向、动力和挑战。
+
+> 约翰肯尼迪登月的例子
 
 有一个非常好的例子，在60年代的时候，约翰肯尼迪说了这句话：我们要在这个10年结束之前把人送上月球，并且安全返回。这是一句非常强大的意向，我们来对比一下刚才这三个标准。
 
