--- a/_posts/2019-06-03-377-mba1302.md
+++ b/_posts/2019-06-03-377-mba1302.md
@@ -7,7 +7,7 @@ tags: [MBA, 创新管理]
 
 # 逆向创新导论
 
-1.1什么是逆向创新
+1.1 什么是逆向创新
 
 什么叫做逆向创新？从传统上来说，一般都是美国这样的富国创造产品，然后卖到像印度这样的穷国。逆向创新恰好就是倒过来做，也就是说在一个穷国创新，比如说在印度，然后将这个产品卖到像美国这样富有的国家。
 
@@ -15,11 +15,11 @@ tags: [MBA, 创新管理]
 
 对于中国还有中国的公司来说，逆向创新是一个非常大增长的机会。
 
-1.2逆向创新为什么发生在穷国或新兴市场国家
+1.2 逆向创新为什么发生在穷国或新兴市场国家
 
 有三个原因能够来解释为什么逆向创新发生在穷国或新兴市场国家。
 
-首先第一个就是我们所说的性能的差距，一般来说在GE有三个不同档次的产品，比如说像超声或者ECG，往往是有三类产品，比如说100美金的，然后是90块钱的，90块钱的就是90%的性能，100块的是100%，80块钱的是80%的性能。
+首先第一个就是我们所说的**性能的差距**，一般来说在GE有三个不同档次的产品，比如说像超声或者ECG，往往是有三类产品，比如说100美金的，然后是90块钱的，90块钱的就是90%的性能，100块的是100%，80块钱的是80%的性能。
 
 然后，GE来到印度，他们也知道印度是穷国，然后把它变成比如说70块钱的东西，但是你也只能做70%的性能了。
 
@@ -27,13 +27,13 @@ tags: [MBA, 创新管理]
 
 你打造这样的一个产品之后，这个产品其实又可以在美国进行销售，因为在美国的话，也有人可能需要这样的产品。
 
-第二个，就是基础设施的缺口。举个例子，比如说美国的能源行业，美国100年前已经集中建立了一些大的电厂，然后用国家电网来输电。但是新能源接入现有的基础设施非常不方便，所以美国在新能源方面就做的不好，因为一旦利用新能源的话，美国现有的这些基础设施就没用了。
+第二个，就是**基础设施的缺口**。举个例子，比如说美国的能源行业，美国100年前已经集中建立了一些大的电厂，然后用国家电网来输电。但是新能源接入现有的基础设施非常不方便，所以美国在新能源方面就做的不好，因为一旦利用新能源的话，美国现有的这些基础设施就没用了。
 
 但是，在中国是没有这种局限性的，中国的电网非常新，所以中国在新能源方面可以弯道超车，可以建最新的，比如说建太阳能电厂、建风电厂。
 
-第三个问题，叫做监管的差距，中国和印度他们并没有像美国那样严格的监管。有监管当然是好的，但是太过于严格的监管就会扼杀创新，比如说在印度，医疗行业监管并不严厉，所以人们愿意去尝试不同的东西，但是在美国监管极其的严格，所以很多时候创新就出不来。
+第三个问题，叫做**监管的差距**，中国和印度他们并没有像美国那样严格的监管。有监管当然是好的，但是太过于严格的监管就会扼杀创新，比如说在印度，医疗行业监管并不严厉，所以人们愿意去尝试不同的东西，但是在美国监管极其的严格，所以很多时候创新就出不来。
 
-所以，逆向创新很多时候都是在新兴市场出现，因为可以弥补在性能上面的差距、基础设施的差距、监管上的差距。
+所以，逆向创新很多时候都是在新兴市场出现，因为可以弥补在**性能上面的差距、基础设施的差距、监管上的差距**。
 
 # 逆向创新的秘诀
 
@@ -42,6 +42,8 @@ tags: [MBA, 创新管理]
 印度有12亿人口，但是非常缺少医生和医院。怎么办？只有有突破式的创新，这是唯一的方式。
 
 中国也必须要做突破式的创新，才能够释放潜力，如果这么做的话，其对于中国以外的地方也是有价值的。中国为什么要这样做，有两个原因，一个就是在中国本身有很多的非消费者，要把这些非消费者转换为消费者，必须做出低成本高质量的产品。在中国成功后，产品也可以卖向全球。
+
+# 心胸外科的逆向创新
 
 印度的Devi Shetty医生，他成立了一家医院叫做Narayana医疗集团，这个医院的开心手术只要2000美元，而相同的开心手术在美国的价格是要15万美元，两者之间大概差75倍，然而，这家医院的手术30天内死亡率是1.2%，美国是2%。这意味着逆向创新并不是低质量的创新，而是不断提高性价比。更加反直觉的是印度的那些非消费者，他们对质量的要求实际上要比美国消费者还要高。
 
@@ -93,7 +95,7 @@ Narayana医院位于班加罗尔，而班加罗尔是只是它的一个枢纽、
 
 另外，中国的公司有非常强的技术能力，为什么不去到更贫穷的国家或者非洲？非洲有那么多的非消费者，你也可以用你的能力释放非洲的市场，如果你可以释放非洲的市场的话，你就可以释放全球的市场，因为全球都需要你的产品。
 
-# 泰国的逆向创新
+# 假肢的逆向创新
 
 再给大家举个例子，不单单只是印度，在泰国，有一个J医生，他也是医学博士，他的医学学位是在西北大学医学院获得的，所以他非常了解美国的医疗体系，他想给泰国的这些截肢患者装上假肢。但是泰国也是很贫穷的国家，就像印度一样，而一个假肢要2万美元，所以泰国患者根本装不起。
 
@@ -109,7 +111,7 @@ J医生决定要做一个30美金的假肢，30美金的假肢并不意味着质
 
 所以，杰医生做了两项创新，所以他的假肢是能够做到质量更高，而且价格只有30美元。第一个，美国假肢用的原材料是很贵的，比如钛。当然了，如果预算只有30美元，你可用不起钛。所以，他用回收的酸奶盒做原材料，成本等于0。
 
-而且，、这个30美元的假肢是非常轻的，又好用，又舒服。
+而且，这个30美元的假肢是非常轻的，又好用，又舒服。
 
 第二项创新是安装的过程，在美国我们是要用非常复杂的流程才能够去安装你的义肢，这个过程又贵又复杂，而且它要花好几个周的时间才帮这个患者对接安上。但是，杰医生30美元一个假肢可请不起昂贵的医生，甚至在泰国都没有这样的医生，因此他的突破性创新就是去训练这些截肢人士，让他们去为别人装假肢。
 
