--- a/_posts/2019-07-10-442-value.md
+++ b/_posts/2019-07-10-442-value.md
@@ -13,7 +13,7 @@ tags: [MBA]
 + 有同理心和大局观
 + 有效产出（TOC）
 + 定期复盘、接受失败、持续尝试
-+ 全栈发展（比如技术、业务、管理等），不自我限定工作范围
++ 全栈发展、自我定位CEO
 + 努力寻找最佳实践
 + 正确的薪资观
 + 打卡（早8.30 ~ 晚5.30）
