--- a/_posts/2019-07-10-442-value.md
+++ b/_posts/2019-07-10-442-value.md
@@ -5,17 +5,18 @@ pid: 442
 tags: [MBA]
 ---
 
-经过两年多的实战，下面是我和团队小伙伴的价值观。
+三年多的实战，我们的价值观，如下：
 
 + 独立思考
 + 主动且有激情
-+ 良好的人际沟通和团队协作
-+ 有同理心和大局观
++ 定位CEO
 + 有效产出（TOC）
++ 同理心和大局观
++ 良好的人际沟通和团队协作
 + 定期复盘、接受失败、持续尝试
-+ 全栈发展、自我定位CEO
-+ 努力寻找最佳实践
-+ 正确的薪资观
++ 全栈发展、不自我限定工作范围
++ 终身寻找最佳实践
++ 薪资观
 + 打卡（早8.30 ~ 晚5.30）
 + 6个月的试用期
 
