--- a/_posts/2019-07-11-445-weathermap.md
+++ b/_posts/2019-07-11-445-weathermap.md
@@ -79,14 +79,14 @@ tags: [servicestage, k8s, 微服务]
 <tr><td>fusionweather</td><td>fusionweather</td><td>否</td>
 <td>
 应用创建成功后，在“应用列表”页单击“fusionweather”，进入应用详情页。
-
+<br/>
 选择“访问方式”页签。
-
-+ 单击“TCP/UDP路由配置”区域的“添加服务”。
-+ “服务名称”建议填写fusion。
-+ “访问方式”选择“集群内访问”。
-+ “协议”选择TCP。
-+ “容器端口”填写13092。
+<br/>
++ 单击“TCP/UDP路由配置”区域的“添加服务”。<br/>
++ “服务名称”建议填写fusion。<br/>
++ “访问方式”选择“集群内访问”。<br/>
++ “协议”选择TCP。<br/>
++ “容器端口”填写13092。<br/>
 + “访问端口”请自行填写，但请保证该端口未被占用，建议与容器端口相同。
 
 </td></tr>
@@ -106,7 +106,7 @@ tags: [servicestage, k8s, 微服务]
 <tr><th>应用名称</th><th>选择镜像</th><th>环境变量</th><th>TCP/UDP路由配置</th></tr>
 <tr><td>weathermapweb</td><td>weathermapweb</td><td>
 
-+ HTTP_PROXY_PORT: 30101
++ HTTP_PROXY_PORT: 30101<br/>
 + SERVICE_ADDR: fusionweather
 
 
