--- a/_posts/2019-07-15-448-kafka-elk.md
+++ b/_posts/2019-07-15-448-kafka-elk.md
@@ -14,7 +14,7 @@ tags: [kafka, elk, 分布式日志收集, springboot]
 1. 我们是通过logback打印日志，然后将日志通过kafka消息队列发送到Logstash,经过处理以后存储到Elasticsearch中，然后通过Kibana图形化界面进行分析和处理。
 2. 我们使用Logstash读取日志文件，经过处理以后存储到Elasticsearch中，然后通过Kibana图形化界面进行分析和处理。例如我们读取nginx的日志文件，可以统计访问用户的ip地域，请求地址等等。
 
-![](/uploads/2019/07/18-19.png)
+![](/uploads/2019/07/18-19.bmp)
 
 # 实验环境
 + centos 7.2
@@ -319,7 +319,7 @@ input {
      kafka {
         topics => "applog"
         type => "kafka"
-        bootstrap_servers => "47.104.255.217:9092"
+        bootstrap_servers => "101.132.227.185:9092"
         codec => "json"
     }
 }
