--- a/_posts/2019-07-12-446-ser-gov.md
+++ b/_posts/2019-07-12-446-ser-gov.md
@@ -68,4 +68,18 @@ https://console.huaweicloud.com/cpts
 
 + 进行限流
 
+---
 
++ 微服务治理之服务降级
+  + 假如恰逢假日高峰，如双十一，势必会出现访问量骤增，现有资源不够用的情况，可使用降级机制关掉部分不重要、性能差的服务避免占用资源，以保证主体业务功能可正常使用，待高峰期过去，再重新开启。
++ 微服务治理之灰度发布
++ 微服务治理之负载均衡
++ 微服务治理之限流
+  + 限流就是一个服务实例限制别的服务访问自身，防止过载崩溃的一种自我保护机制。
++ 微服务治理之熔断
+  + 微服务应用中通常会存在多层服务调用，基础服务的故障（比如接口超过SLA水平的时延）可能会导致级联故障，将不可用逐渐放大到整个服务，进而拖累整个系统不可用。我们可以使用服务熔断机制，来解决这种因“服务提供者”的不可用导致“服务调用者”不可用的问题。
++ 微服务治理之容错
+  + Failover: 失败自动切换，失败时在其他服务实例上重试。通常用于无状态服务实例读操作，但重试会增加时延。
+  + Failfast: 快速失败，失败时会立即返回失败结果，不重试。（缺省），通常用于非幂等性的写操作，比如新增。
+  + Failback: 失败原地重试，失败时在同一服务实例上重试一次。通常用于读操作，但重试会增加时延。
+  + custom: 自定义，用户可根据实际需求设置。
