--- a/_posts/2019-08-20-466-hystrix03.md
+++ b/_posts/2019-08-20-466-hystrix03.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Hystrix Dashboard 单体监控
+title: 微服务：Hystrix Dashboard 单体监控
 pid: 466
 tags: [microservice, springcloud]
 ---
