--- a/_posts/2019-07-11-445-weathermap.md
+++ b/_posts/2019-07-11-445-weathermap.md
@@ -2,7 +2,7 @@
 layout: post
 title: 最佳实践：容器部署weathermap
 pid: 445
-tags: [servicestage, k8s, 微服务]
+tags: [servicestage, k8s, microservice]
 ---
 
 # 创建后台应用构建任务
