--- a/_posts/2019-08-17-461-springcloud.md
+++ b/_posts/2019-08-17-461-springcloud.md
@@ -5,33 +5,31 @@ pid: 461
 tags: [microservice, springcloud]
 ---
 
++ Spring boot
++ Spring Actuator -- 监控
++ RestTemplate
++ Spring Cloud Eureka -- 服务治理
+  + Spring Cloud Eurake Server -- 注册中心
+  + Spring Cloud Discovery Client -- 发现服务1
+  + Spring Cloud Eureka Client -- 发现服务2
++ Spring Cloud Ribbon -- 客户端负载均衡 -- 服务消费1
++ RxJava
++ Spring Cloud Hystrix -- 容错保护
++ Spring Cloud Feign -- 声明式服务调用 -- 服务消费2
++ Spring Cloud Zuul -- API网关服务
++ Spring Cloud Config -- 分布式配置中心
++ Spring Cloud Bus -- 消息总线
++ Spring Cloud Stream -- 消息驱动服务
++ Spring Cloud Sleuth -- 分布式服务跟踪
 
-+ 注册中心
-  + Eureka
-    + Spring Cloud Eureka (注册中心)
-    + Spring Cloud Discovery Client (服务提供者)
-	+ Spring Cloud Eureka Client (服务消费者)
-  + Consul
-  + Zookeeper
-+ 客户端负载均衡
-  + Spring Cloud Ribbon
-  + Spring Cloud Feign (声明式服务调用)
-+ 分布式配置中心
-  + Spring Cloud Config
-  + Spring Cloud Config Server
-  + Spring Cloud Config Client
-+ 消息总线
-  + Spring Cloud Bus
-+ 服务容错保护
-  + Spring Cloud Hystrix
-+ API网关服务
-  + Spring Cloud Zuul
-+ 分布式服务跟踪
-  + Spring Cloud Sleuth
-+ 消息驱动的服务
-  + Spring Cloud Stream
-  
-  
+
 高可用服务设计
 https://www.cnblogs.com/duanxz/archive/2013/06/13/3134358.html
 + [Spring Cloud 系列文章](http://www.ityouknow.com/spring-cloud.html)
+
+
+
+
+
+
+
