--- a/_posts/2018-12-20-327-k8s.md
+++ b/_posts/2018-12-20-327-k8s.md
@@ -2,7 +2,7 @@
 layout: post
 title: 谈 Kubernetes 的架构设计与实现原理
 pid: 327
-tags: [kubernetes, Docker, 微服务, 容器编排]
+tags: [kubernetes, 容器编排]
 ---
 
 Kubernetes 基本上是这两年最热门、最被人熟知的技术了，它为软件工程师提供了强大的容器编排能力，模糊了开发和运维之间的边界，让我们开发、管理和维护一个大型的分布式系统和项目变得更加容易。
