--- a/_posts/2016-08-31-102-mysql-json.md
+++ b/_posts/2016-08-31-102-mysql-json.md
@@ -2,7 +2,7 @@
 layout: post
 title: MYSQL JSON
 pid: 102
-tags: [mysql,json]
+tags: [mysql]
 ---
 
 在日常开发中，我们不可避免的要使用json数据，如果每次都自己编写生成json文件，总是要花费不少时间，今天我们来学习一下几个常用的程序，希望可以方便今后快速搭建json后台程序。
