--- a/_posts/2016-11-24-117-centos-lnmp.md
+++ b/_posts/2016-11-24-117-centos-lnmp.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 如何在Centos 7中安装配置LNMP
+title: 如何在Centos 7中安装wecenter
 pid: 117
-tags: [centos, linux, nginx, mysql, php, wecenter, lnmp]
+tags: [centos]
 ---
 
 找了很多帮助，看了很多[参考](http://wenda.wecenter.com/article/1226)，最终，还是自己再整理一下吧。
