--- a/_posts/2017-03-21-231-centos-iftop.md
+++ b/_posts/2017-03-21-231-centos-iftop.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Centos下的实时流量监控
+title: Centos下的实时流量监控iftop
 pid: 231
-tags: [linux, centos, iftop]
+tags: [centos]
 ---
 
 
