--- a/_posts/2017-03-20-227-centos-tmp.md
+++ b/_posts/2017-03-20-227-centos-tmp.md
@@ -2,7 +2,7 @@
 layout: post
 title: Centos tmp 无法读写问题
 pid: 227
-tags: [linux, centos, tmp]
+tags: [centos]
 ---
 我遇到了一个奇葩的问题，我的/tmp目录，我用root登录进去，都不能读写，查看空间也都是有的，实在没有办法了，我改了系统默认的临时目录。
 
