--- a/_posts/2019-06-27-436-find.md
+++ b/_posts/2019-06-27-436-find.md
@@ -2,7 +2,7 @@
 layout: post
 title: find
 pid: 436
-tags: [centos, linux, k8s, shell]
+tags: [linux]
 ---
 
 
@@ -50,20 +50,3 @@ find -H .                      \
 ```
 
 请一定按照上面换行的方式来写，合成一行的方式，屡次尝试，都失败！
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
