--- a/_posts/2016-11-24-118-php-mcrypt.md
+++ b/_posts/2016-11-24-118-php-mcrypt.md
@@ -2,7 +2,7 @@
 layout: post
 title: 如何给Centos安装mcrypt库
 pid: 118
-tags: [centos, linux, nginx, php, mcrypt]
+tags: [centos]
 ---
 本文[参照](http://www.cnblogs.com/huangzhen/archive/2012/09/12/2681861.html) 具体步骤按照本人实际操作。
 
