--- a/_posts/2017-04-19-242-cmd.md
+++ b/_posts/2017-04-19-242-cmd.md
@@ -2,7 +2,7 @@
 layout: post
 title: 在Windows的CMD中如何设置支持UTF8编码?
 pid: 242
-tags: [windows, cmd]
+tags: [windows]
 ---
 
 # 在Windows的CMD中如何设置支持UTF8编码?
