--- a/_posts/2017-04-19-243-mvn-pom.md
+++ b/_posts/2017-04-19-243-mvn-pom.md
@@ -2,7 +2,7 @@
 layout: post
 title: 如何编译出你想要的jar包？
 pid: 243
-tags: [maven, mvn]
+tags: [maven]
 ---
 
 # maven-jar-plugin  -- 主要目的是生成 Jar包中的 MANIFEST.MF，和对应的jar包
