--- a/_posts/2019-08-21-475-consul02.md
+++ b/_posts/2019-08-21-475-consul02.md
@@ -2,7 +2,7 @@
 layout: post
 title: 微服务：在Spring Cloud中使用Consul实现服务的注册和发现
 pid: 475
-tags: [microservice, consul]
+tags: [microservice]
 ---
 
 首先安装consul环境，参照之前的文章：《服务注册发现consul之一：consul介绍及安装》中的第一节介绍。
