--- a/_posts/2018-06-27-278-auto-start.md
+++ b/_posts/2018-06-27-278-auto-start.md
@@ -2,7 +2,7 @@
 layout: post
 title: nginx开机启动
 pid: 278
-tags: [centos, nginx, https]
+tags: [nginx]
 ---
 
 [Linux(CentOS)下设置nginx开机自动启动和chkconfig管理](https://blog.csdn.net/u013870094/article/details/52463026)
