--- a/_posts/2019-07-15-448-kafka-elk.md
+++ b/_posts/2019-07-15-448-kafka-elk.md
@@ -2,7 +2,7 @@
 layout: post
 title: ELK+logback+kafka+nginx 搭建分布式日志分析平台
 pid: 448
-tags: [kafka, elk, 分布式日志收集, springboot]
+tags: [分布式日志收集]
 ---
 
 # 概要图
