--- a/_posts/2019-08-21-474-consul01.md
+++ b/_posts/2019-08-21-474-consul01.md
@@ -2,7 +2,7 @@
 layout: post
 title: 微服务：consul介绍、安装、及功能介绍
 pid: 474
-tags: [microservice, consul]
+tags: [microservice]
 ---
 
 Consul 是一套开源的分布式服务发现和配置管理系统，由 HashiCorp 公司用 Go 语言开发。它具有很多优点。包括：基于 raft 协议，比较简洁； 支持健康检查, 同时支持 HTTP 和 DNS 协议 支持跨数据中心的 WAN(广域网) 集群 提供图形界面 跨平台，支持 Linux、Mac、Windows。
