--- a/_posts/2019-07-15-447-logback.md
+++ b/_posts/2019-07-15-447-logback.md
@@ -2,7 +2,7 @@
 layout: post
 title: logback
 pid: 447
-tags: [java, log, slf4j, logback]
+tags: [日志]
 ---
 
 请参考样例[logback](https://github.com/baoguoding/logback.git)
