--- a/_posts/2016-12-22-157-udisk-centos7.md
+++ b/_posts/2016-12-22-157-udisk-centos7.md
@@ -2,7 +2,7 @@
 layout: post
 title: U盘制作Centos7安装镜像
 pid: 157
-tags: [ultraios, centos]
+tags: [centos]
 ---
 # Preparation
     1. install UltraISO
