--- a/_posts/2018-07-13-280-hr-netflix.md
+++ b/_posts/2018-07-13-280-hr-netflix.md
@@ -2,7 +2,7 @@
 layout: post
 title: Netflix颠覆HR：我们只雇「成年人」
 pid: 280
-tags: [管理, HR]
+tags: [岗前培训]
 ---
 
 > Netflix 的前首席人才官 Patty McCord 制作的《自由&责任的文化》风靡硅谷，在这背后到底蕴藏着什么样的人才观？
