--- a/_posts/2018-07-16-281-hr-netflix.md
+++ b/_posts/2018-07-16-281-hr-netflix.md
@@ -2,7 +2,7 @@
 layout: post
 title: Netflix Culture： Freedom & Responsibility
 pid: 281
-tags: [管理, HR]
+tags: [岗前培训]
 ---
 
 Netflix Culture: Freedom & Responsibility
