--- a/_posts/2016-11-24-116-centos-nginx.md
+++ b/_posts/2016-11-24-116-centos-nginx.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 如何在Centos 7中安装配置Nginx
+title: 安装配置Nginx
 pid: 116
-tags: [centos, nginx]
+tags: [nginx]
 ---
 
 因为默认Centos 7的yum源中是没有Nginx Repo的，所以我们需要自己去添加Nginx源。
