--- a/_posts/2019-08-13-456-eureka02.md
+++ b/_posts/2019-08-13-456-eureka02.md
@@ -2,7 +2,7 @@
 layout: post
 title: 微服务：Eureka高可用注册中心
 pid: 456
-tags: [microservice, springcloud]
+tags: [microservice]
 ---
 
 + 更新 Eureka Server
