--- a/_posts/2019-08-17-460-hystrix.md
+++ b/_posts/2019-08-17-460-hystrix.md
@@ -2,7 +2,7 @@
 layout: post
 title: 微服务：Hystrix
 pid: 460
-tags: [microservice, springcloud]
+tags: [microservice]
 ---
 
 在微服务架构中，我们将系统拆分成了一个个的服务单元，各单元间通过服务注册与订阅的方式互相依赖。由于每个单元都在不同的进程中运行，依赖通过远程调用的方式执行，这样就有可能因为网络原因或是依赖服务自身问题出现调用故障或延迟，而这些问题会直接导致调用方的对外服务也出现延迟，若此时调用方的请求不断增加，最后就会出现因等待出现故障的依赖方响应而形成任务积压，最终导致自身服务的瘫痪。
