--- a/_posts/2019-08-20-470-hystrix07.md
+++ b/_posts/2019-08-20-470-hystrix07.md
@@ -2,7 +2,7 @@
 layout: post
 title: 微服务：缓存功能的使用
 pid: 470
-tags: [microservice, springcloud]
+tags: [microservice]
 ---
 
 高并发环境下如果能处理好缓存就可以有效的减小服务器的压力，Java中有许多非常好用的缓存工具，比如Redis、EHCache等，当然在Spring Cloud的Hystrix中也提供了请求缓存的功能，我们可以通过一个注解或者一个方法来开启缓存，进而减轻高并发环境下系统的压力。
