--- a/_posts/2019-08-25-477-zuul02.md
+++ b/_posts/2019-08-25-477-zuul02.md
@@ -2,7 +2,7 @@
 layout: post
 title: 微服务：过滤器
 pid: 477
-tags: [microservice, springcloud]
+tags: [microservice]
 ---
 
 Zuul的核心是一系列的过滤器，这些过滤器可以完成以下功能：
