--- a/_posts/2019-08-26-480-actuator.md
+++ b/_posts/2019-08-26-480-actuator.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 微服务：Actuator
+title: 微服务：Spring Cloud Actuator
 pid: 480
-tags: [microservice, springcloud]
+tags: [microservice]
 ---
 
 + 更新 application.properties
