--- a/_posts/2019-08-13-455-eureka.md
+++ b/_posts/2019-08-13-455-eureka.md
@@ -2,7 +2,7 @@
 layout: post
 title: 微服务：Eureka和Discovery Client
 pid: 455
-tags: [microservice, springcloud]
+tags: [microservice]
 ---
 
 + [创建Eureka Server项目](https://start.spring.io/)
