--- a/_posts/2019-08-19-462-Feign.md
+++ b/_posts/2019-08-19-462-Feign.md
@@ -2,7 +2,7 @@
 layout: post
 title: 微服务：Feign
 pid: 462
-tags: [microservice, springcloud]
+tags: [microservice]
 ---
 
 Spring Cloud提供了Ribbon和Feign作为客户端的负载均衡。
