--- a/_posts/2019-08-20-466-hystrix03.md
+++ b/_posts/2019-08-20-466-hystrix03.md
@@ -2,7 +2,7 @@
 layout: post
 title: 微服务：Hystrix Dashboard 单体监控
 pid: 466
-tags: [microservice, springcloud]
+tags: [microservice]
 ---
 
 # 一、Hystrix Dashboard简介
