--- a/_posts/2018-12-12-318-wfw02.md
+++ b/_posts/2018-12-12-318-wfw02.md
@@ -2,7 +2,7 @@
 layout: post
 title: 【杏仁技术站】乐高式微服务化改造（下） 
 pid: 318
-tags: [microservice]
+tags: [微服务]
 ---
 
 上篇讲了杏仁微服务化改造的项目背景和基本框架，这篇我将进一步介绍其中的三大核心组件，即注册中心，配置中心和授权中心。
