--- a/_posts/2019-08-20-469-hystrix06.md
+++ b/_posts/2019-08-20-469-hystrix06.md
@@ -2,7 +2,7 @@
 layout: post
 title: 微服务：服务熔断和服务降级
 pid: 469
-tags: [microservice]
+tags: [微服务]
 ---
 
 伴随着微服务架构被宣传得如火如荼，一些概念也被推到了我们面前（管你接受不接受），其实大多数概念以前就有，但很少被提的这么频繁（现在好像不提及都不好意思交流了）。想起有人总结的一句话，微服务架构的特点就是：“一解释就懂，一问就不知，一讨论就吵架”。
