--- a/_posts/2019-08-20-471-hystrix08.md
+++ b/_posts/2019-08-20-471-hystrix08.md
@@ -2,7 +2,7 @@
 layout: post
 title: 微服务：Hystrix资源隔离策略
 pid: 471
-tags: [microservice]
+tags: [微服务]
 ---
 
 在一个基于微服务的应用程序中，您通常需要调用多个微服务完成一个特定任务。使用舱壁模式，这些调用默认是使用相同的线程来执行调用的，这些线程Java容器为处理所有请求预留的。在高服务器请求的情况下，一个性能较低的服务会“霸占”java容器中绝大多数线程，而其它性能正常的服务的请求则需要等待线程资源的释放。最后，整个java容器会崩溃。舱壁模式能将远程调用隔离在各个远程调用自己的线程池中，因此单个性能出问题的服务能得到控制，java容器也不会崩溃。
