--- a/_posts/2019-08-25-478-zuul03.md
+++ b/_posts/2019-08-25-478-zuul03.md
@@ -2,7 +2,7 @@
 layout: post
 title: 微服务：zuul统一异常处理
 pid: 478
-tags: [microservice]
+tags: [微服务]
 ---
 
 我们详细介绍了Spring Cloud Zuul中自己实现的一些核心过滤器，以及这些过滤器在请求生命周期中的不同作用。我们会发现在这些核心过滤器中并没有实现error阶段的过滤器。那么这些过滤器可以用来做什么呢？接下来，本文将介绍如何利用error过滤器来实现统一的异常处理。
