--- a/_posts/2018-03-05-271-diaodu.md
+++ b/_posts/2018-03-05-271-diaodu.md
@@ -2,7 +2,7 @@
 layout: post
 title: H总车队调度公司见闻
 pid: 271
-tags: [国际贸易]
+tags: [货代]
 ---
 
 今天是2018年3月5日，第一天来到调度公司，调度公司位于上海宝山区的在一间没有装修的出租房内（房租3600每月），所有设备都是最简单的，两个办公桌，两台电脑还有打印机就是这家调度公司的全部，调度公司上午很忙，下午基本上就是消遣的时间。
