--- a/_posts/2018-10-29-300-xcw01.md
+++ b/_posts/2018-10-29-300-xcw01.md
@@ -2,7 +2,7 @@
 layout: post
 title: 【财务会计模块】 第1节 财务分析与企业生命周期
 pid: 300
-tags: [MBA, 财务会计]
+tags: [mba]
 ---
 
 今天很荣幸到混沌商学院来跟大家分享我们在企业管理、风险管理、财务管理方面的一些经验和认识。
