--- a/_posts/2019-06-03-376-mba1301.md
+++ b/_posts/2019-06-03-376-mba1301.md
@@ -2,7 +2,7 @@
 layout: post
 title: 【创新管理模块】 第1节 三盒创新理论
 pid: 376
-tags: [MBA, 创新管理]
+tags: [mba]
 ---
 
 下午好！首先和各位同学做一下自我介绍。我现在是在达特茅斯大学塔克商学院工作，我在MC49（位于硅谷的一个孵化器），在那边跟他们有合作。在过去的15年的时间里面，我一直都在研究创新，我也跟一些美国的企业合作，帮助他们更好的找到创新之道。2008年和2009年，通用电气邀请我全职加入GE工作，所以我请了两年的假，一共是24个月，去到GE和他们的CEO杰夫·伊梅尔特共事，为GE带来创新。
