--- a/_posts/2019-06-03-380-mba1201.md
+++ b/_posts/2019-06-03-380-mba1201.md
@@ -2,7 +2,7 @@
 layout: post
 title: 【组织行为学模块】 第1节 微观层面：颠覆认知，寻求魔镜
 pid: 380
-tags: [MBA, 组织行为学]
+tags: [mba]
 ---
 
 组织行为学是全世界所有商学院的必修课程，它研究的是在组织情景中的人类行为。从组织行为学来讲，一般可以从微观、中观和宏观层面，或者说从个体行为、群体行为、组织行为这三个角度来分析、探讨、研究人类的行为。在个体行为中，我们会特别强调认知的颠覆，在群体行为中会强调如何对团队进行赋能，使它成为高绩效的团队。在组织层面中特别强调从生态这个角度，就是组织结构是有机的，而不是过去传统的、机械的。最后把个体行为、群体行为、组织行为这三个层面融会贯通。打通以后着眼于从个体行为中间，也就是个人成长怎么从基础的个人成为优秀的管理者，进一步成为卓越的领导者。
