--- a/_posts/2019-06-03-383-mba1204.md
+++ b/_posts/2019-06-03-383-mba1204.md
@@ -2,7 +2,7 @@
 layout: post
 title: 【组织行为学模块】 第4节 卓越领导：融会贯通，超越自我
 pid: 383
-tags: [MBA, 组织行为学]
+tags: [mba]
 ---
 
 同学们好，下面我们进行第四个专题的讨论。在第四个专题中，我希望把前面三个专题关于个体、群体、组织行为能够融会贯通。通，我们要通到什么程度？我想中国文化讲到天时地利人和，我希望我们能够顺天时，得地利，赢人和。
