--- a/_posts/2019-06-03-391-mba1004.md
+++ b/_posts/2019-06-03-391-mba1004.md
@@ -2,7 +2,7 @@
 layout: post
 title: 【战略管理模块】 第4节 谋和战略
 pid: 391
-tags: [MBA, 战略管理]
+tags: [mba]
 ---
 
 前面三堂课，汤明哲教授讲的是大战略，大战略是未来发展的方向。可是平常还是要做决策，比如定价、计划产品线等等。第四讲和第五讲，汤明哲老师主要讲日常决策中的小战略。小战略有谋合的战略和竞争的战略。
