--- a/_posts/2019-06-05-408-mba0103.md
+++ b/_posts/2019-06-05-408-mba0103.md
@@ -2,7 +2,7 @@
 layout: post
 title: 【先导课程模块】 第3节 可复制的领导力
 pid: 408
-tags: [MBA, 领导力]
+tags: [mba]
 ---
 
 公司应该是个球队。大家聚在一起是为了进步，为了赢得最终胜利。唯有如此，才能将团队打造成激烈商战中无坚不摧的铁军。
