--- a/_posts/2019-06-03-375-mba.md
+++ b/_posts/2019-06-03-375-mba.md
@@ -108,19 +108,22 @@ tags: [mba]
 + 天文
 + 社会学
 + 心理学
++ 其他等等
 
 在这个信息大爆炸的时代，我们需要多少知识才足以支撑我们的生活？
 
 很多知识、人脉都是几代人的积累，我们该何去何从？
 
-我觉得混沌提出的“哲科思维”有一定的道理，至少在一定时间内，我们会按照这个方式去前进。
+混沌提出的“哲科思维”非常有道理，在相当长的时间内，我要按照这个方式去前进。
 
-是探索欲和求知欲促使我们前行？ 还是求生欲？
+斗转星移、世界变化之快，是探索欲和求知欲促使我们前行？还是求生欲？
+
+如何发现更多的商机？探索建设性解决方案？
 
 如何在复杂的形势下，做到Win-Win？
 
-如何发现更多的商机？和提出建设性的建议？
+管理是一门提升成功可能性的学科，我们不能忽略基础学科的重要性。
 
-管理只是一门提升成功可能性的学科，促使社会真正进步的，都是基础学科的进步，比如数学、物理、化学、生物学等等。
+学习管理学相关的内容，是为了更好的去理解社会、服务社会；在时机成熟的情况下，搭配、组合各种资源从而产生指数级效应；做到人尽其才，物尽其用。
 
-学习管理学相关的内容，是为了更好的去理解这个社会；在时机成熟的情况下，让各种资源组合、搭配产生指数级提升；做到人尽其能，物尽其用。
+成为商业精英、商业领袖！
