--- a/_posts/2019-12-11-487-story.md
+++ b/_posts/2019-12-11-487-story.md
@@ -2,7 +2,7 @@
 layout: post
 title: 需求管理与规划
 pid: 486
-tags: [货代]
+tags: [产品经理]
 ---
 
 传统的瀑布工作模式使用详细的需求说明书来表达需求，需求人员负责做需求调研，根据调研情况编制详细的需求说明书，进行需求评审，评审之后签字确认交给研发团队设计开发。在这样的环境下，需求文档是信息传递的主体，也是一份契约。
