--- a/_posts/2017-01-04-185-luozhenyu-2017-eve-00.md
+++ b/_posts/2017-01-04-185-luozhenyu-2017-eve-00.md
@@ -2,7 +2,7 @@
 layout: post
 title: 开场
 pid: 185
-tags: [2016年罗胖跨年演讲文稿]
+tags: [罗胖跨年演讲文稿]
 ---
 罗振宇：2016年10月20日，深圳市发布了一个紧急的动员令，因为据说今年第22号台风“海马”马上要登陆深圳。那好，既然台风来了，市政府就做了各种各样的预备动作，因为这是建国以来10月份登陆广东的最强台风。那就准备了各种冲锋舟、救生衣、照明灯，然后还在易涝路段、机场车站布置了大量的警力，全国停课、停业、停市，大量动车高铁全部都停运。
 
