--- a/_posts/2017-01-04-187-luozhenyu-2017-eve-02.md
+++ b/_posts/2017-01-04-187-luozhenyu-2017-eve-02.md
@@ -2,7 +2,7 @@
 layout: post
 title: 二.消费升级
 pid: 187
-tags: [2016年罗胖跨年演讲文稿]
+tags: [罗胖跨年演讲文稿]
 ---
 罗振宇：下面我们来说第二只黑天鹅，我们还是要回到时间话题。因为每一个人的时间都被占满，每一个人都不得不面对无时无刻的时间的选择，所以时间这个东西已经变质了，它变成我们自己。我们选择怎么花时间，其实已经正在改变我们自己，今年我看了一篇文章，心理医生李子勋先生，很有名的，有一天有一个患者，就去找他，说自己有一个天大的难题，他说我的这个女儿，他的父亲经常出差在外不回家，然后回到家之后孩子就不认他，不叫他爸爸，请问怎么办？我怎么教育这孩子应该对他父亲好？
 
