--- a/_posts/2017-01-04-188-luozhenyu-2017-eve-03.md
+++ b/_posts/2017-01-04-188-luozhenyu-2017-eve-03.md
@@ -2,7 +2,7 @@
 layout: post
 title: 三.智能革命
 pid: 188
-tags: [2016年罗胖跨年演讲文稿]
+tags: [罗胖跨年演讲文稿]
 ---
 罗振宇：下一只黑天鹅，其实比较大，比我的脸还大，虚，比那谁的肾都虚。这就是人工智能。人工智能作为一个不确定性，2016年已经毫无任何意义的来到我们的身边。有这么几件事，印象深刻，除了AlphaGo大战李世石之外，鲍勃迪伦获得了今年的诺贝尔文学奖，然后IBM公司用炫技的心态刷了一把存在感，用他们的人工智能的机器叫watson，花了几秒钟的时间，阅读了鲍勃迪伦先生的作品，然后，给他说出了一句话，你的歌曲反映的是两种情绪，叫流逝的光阴，和枯萎的爱情。这是一个机器的判断。
 
