--- a/_posts/2017-01-04-189-luozhenyu-2017-eve-04.md
+++ b/_posts/2017-01-04-189-luozhenyu-2017-eve-04.md
@@ -2,7 +2,7 @@
 layout: post
 title: 四.认知迭代
 pid: 189
-tags: [2016年罗胖跨年演讲文稿]
+tags: [罗胖跨年演讲文稿]
 ---
 罗振宇：第四只黑天鹅。今年年初，那还是一个冬天，有一次我遇到了真格基金的徐小平先生，他跟我说，我本来都准备退休了。但是我现在又决定不退了，为什么呢，因为有一件事情我搞不懂，就是网红。网红是怎么回事？我不退休了，我要去看一看。看了一圈之后，徐小平老师回来说，他说我搞明白了，**网红的定义是自我赋权的权威。**
 
