--- a/_posts/2017-01-04-190-luozhenyu-2017-eve-05.md
+++ b/_posts/2017-01-04-190-luozhenyu-2017-eve-05.md
@@ -2,7 +2,7 @@
 layout: post
 title: 五.后真相
 pid: 190
-tags: [2016年罗胖跨年演讲文稿]
+tags: [罗胖跨年演讲文稿]
 ---
 罗振宇：我们来抓最后一只黑天鹅。有一个词1992年就已经发明，但是2016年的11月份之后，这个词的使用率飙升了200倍，post truth，后真相。后真相是什么意思？
 
