--- a/_posts/2017-01-04-191-luozhenyu-2017-eve-06.md
+++ b/_posts/2017-01-04-191-luozhenyu-2017-eve-06.md
@@ -2,7 +2,7 @@
 layout: post
 title: 六.那些男孩教我的事
 pid: 191
-tags: [2016年罗胖跨年演讲文稿]
+tags: [罗胖跨年演讲文稿]
 ---
 罗振宇：新年第一件事，我们照个合影，用vivo  Xplay6双曲面、专业级双摄手机照一个合影，兼顾两边，我照两张。
 
