--- a/_posts/2018-01-09-264-luozhenyu.md
+++ b/_posts/2018-01-09-264-luozhenyu.md
@@ -2,7 +2,7 @@
 layout: post
 title: 罗振宇2017-2018跨年演讲
 pid: 264
-tags: [管理]
+tags: [罗胖跨年演讲文稿]
 ---
 
 2017年12月31日20:30，上海梅赛德斯奔驰文化中心，罗振宇“时间的朋友”跨年演讲如约而至。
