--- a/_posts/2020-04-01-492-ot.md
+++ b/_posts/2020-04-01-492-ot.md
@@ -10,7 +10,7 @@ tags: [岗前培训]
 + 产品上线（控制在晚上7点前）
 + 分享会（控制在晚上7点前）
 + 项目赶进度（控制在晚上10点前） 
-+ 核心人员的日程限制（控制在晚上9点前）
++ 核心人员日程限制（控制在晚上9点前）
 
 
 只有合理的休息，才能有高效的产出。
