--- a/_posts/2020-04-01-492-ot.md
+++ b/_posts/2020-04-01-492-ot.md
@@ -5,12 +5,24 @@ pid: 492
 tags: [岗前培训]
 ---
 
-什么样的加班申请？应该被批准。
+我们不鼓励加班，我们希望每个人充分利用上班的8个小时，合理计划安排好8个小时。
+
+同样的，我们也会有配套的策略，比如：
+
++ 项目工时评估控制
++ 日报进度跟进
++ 冲刺进度跟进
++ 项目发布跟进
+
+同样的，跟进当前团队实际情况，下面的加班申请，将会被批准。
 
 + 产品上线（控制在晚上7点前）
 + 分享会（控制在晚上7点前）
 + 项目赶进度（控制在晚上10点前） 
 + 核心人员日程限制（控制在晚上9点前）
 
+我们希望你有合理的休息时间，更重要的是有高效的产出。
 
-只有合理的休息，才能有高效的产出。
+备注：
+
+关于如何提升8小时的效率，我们另外讨论。
