--- a/_posts/2020-04-01-492-ot.md
+++ b/_posts/2020-04-01-492-ot.md
@@ -5,8 +5,6 @@ pid: 492
 tags: [岗前培训]
 ---
 
-![](/uploads/2020/04/02-01.jpg)
-
 我们不鼓励加班，我们希望每个人充分利用上班的8个小时，合理计划安排好8个小时。
 
 # 支撑策略
@@ -26,5 +24,6 @@ tags: [岗前培训]
 # 备注
 
 + 关于如何提升8小时的工作效率，我们另外讨论。
-+ 封面书籍推荐《别再用勤奋掩饰你的懒惰》
 + 我们相信只有合理的休息时间，才会有高效的产出。
++ 书籍推荐《别再用勤奋掩饰你的懒惰》
+<img src="/uploads/2020/04/02-01.jpg" alt="" style="width: 200px;">
