--- a/_posts/2020-04-03-493-rpd.md
+++ b/_posts/2020-04-03-493-rpd.md
@@ -19,7 +19,7 @@ tags: [岗前培训]
 
 + 研发开始后，从尽早集成的角度考虑，后端应优先提供伪接口。（建议半天内）
 + 前端优先使用伪接口进行研发。
-+ 后端应及时更新接口，以适应前端业务和产品进度需要。
++ 后端应及时更新接口，以适应前端研发和产品进度需要。
 + 后端接口更新应及时通知前端人员，避免不必要的矛盾。
 
 + 产品交付是整体交付，只是前端或后端完成，不具备任何意义；时间充裕，应多与伙伴沟通，切实解决困难与疑惑；尽早集成测试，从而确保按时交付。
